# DC33_CHV_Badge_Firmware

./: .clang-format  .gitignore  .gitmodules  README.md  shell.nix  uart_flash.py  vm.org
common/: CMakeLists.txt  dc33_fw_spi.proto  led.c  led.h  spi.c  spi.h
rp2040/: CMakeLists.txt  FreeRTOSConfig.h  default.nix  main.c  shell.nix  tusb_config.h  usb_descriptors.c
s32k148/: CMakeLists.txt  FlexCAN.c  FlexCAN.h  FreeRTOSConfig.h  LPSPI.c  LPSPI.h  LPUART.c  LPUART.h  S32K148.h  S32K148_256_flash.ld  S32K148_features.h  S32K148_wrapped.h  bootloader.c  bootloader.ld  clocks_and_modes.c  clocks_and_modes.h  default.nix  device_registers.h  hex.c  led.h  leds.h  main.c  main.cpp  main.ld  script.h  shell.nix  startup_S32K148.S  system_S32K148.c  system_S32K148.h  unused.c
